fix 2px gap lol

--- a/less/style.less
+++ b/less/style.less
@@ -755,6 +755,8 @@ p {
 }
 .slider {
     height: @slider-height;
+    // fix weird gap lol this is horrible
+    margin-top: -2px;
     width: 100%;
     background-color: @dark-blue;
 
@@ -949,6 +951,7 @@ p {
 
     .podd-ep-text {
         margin: 15px;
+        margin-top: 10px;
     }
 
     .podd-text {
